--- a/client/src/css/course-select-table.css
+++ b/client/src/css/course-select-table.css
@@ -18,6 +18,7 @@ TODO------
     background-color: var(--select-table-background-color);
     font-family: 'Montserrat', sans-serif;
     cursor: default;
+    scrollbar-width: none;
 }
 
 .courseTable::-webkit-scrollbar { 
